# abyss-singularity

./: .gitignore  USER_MANUAL.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
abyss-directory/: README.md  package-lock.json  package.json  schema.sql  wrangler.toml
abyss-directory/src/: index.ts
scripts/: release.ps1
src/: App.tsx  app.css
src-mesh/: go.mod  main.go
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: icon-gen.rs
src-tauri/src/: lib.rs  main.rs  util.rs
src-tauri/src/chat/: client.rs  commands.rs  config.rs  mod.rs  protocol.rs  server.rs  session.rs  state.rs  tests.rs  types.rs
src-tauri/src/controller/: commands.rs  mod.rs  retroarch.rs  tests.rs  types.rs
src-tauri/src/diagnostics/: commands.rs  mod.rs  types.rs
src-tauri/src/directory/: client.rs  commands.rs  config.rs  heartbeat.rs  mod.rs  types.rs
src-tauri/src/installer/: bios_finder.rs  commands.rs  controller_setup.rs  download.rs  extract.rs  manifests.rs  mod.rs  streaming_apps.rs  tests.rs  types.rs
src-tauri/src/lobby/: commands.rs  handlers.rs  mod.rs  state.rs  types.rs
src-tauri/src/mesh/: control.rs  mod.rs  proxy_protocol.rs  sidecar.rs  socks5.rs  tests.rs  types.rs
src-tauri/src/network/: commands.rs  config.rs  invite.rs  latency.rs  mod.rs  regions.rs  tailscale.rs  tests.rs  types.rs
src-tauri/src/orchestration/: commands.rs  config.rs  embed.rs  launcher.rs  mod.rs  recipes.rs  tests.rs  types.rs
src-tauri/src/streaming/: commands.rs  config.rs  mod.rs  pairing.rs  types.rs
src-tauri/src/transfer/: client.rs  commands.rs  mod.rs  protocol.rs  server.rs  state.rs  tests.rs  types.rs
(+38 files in other folders)
