[package]
name = "abyss-singularity"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "abyss_singularity_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-log = "2.8.0"
log = "0.4.29"
tauri-plugin-store = "^2"
tauri-plugin-dialog = "^2"
tauri-plugin-fs = "^2"
anyhow = "^1"
thiserror = "^2"
sha2 = "^0.10"
hex = "^0.4"
walkdir = "^2.5"
reqwest = { version = "^0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
chrono = { version = "^0.4", features = ["serde"] }
futures-util = "^0.3"
tokio = { version = "1.52.3", features = ["sync", "fs", "macros", "time", "rt", "process", "io-util", "net"] }
tauri-plugin-shell = "^2"
zip = "^4"
sevenz-rust2 = "^0.18"
futures = "^0.3"
windows = { version = "^0.62", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }
tauri-plugin-single-instance = "^2"
tauri-plugin-updater = "^2"
image = { version = "^0.25", default-features = false, features = ["png"] }
ico   = "^0.4"

